--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 phpDocumentor.phar
 docs/phpdoc-cache-*
-test-supload
+deploy
 phpunit-*.phar
 coverage.xml
 tests/resources/arxiv/0809.2542v4.pdf_original
