--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: php
 php:
  - 5.6
+ - 7.0
  - 7.1
  - 7.2
  - 7.3
@@ -10,3 +11,6 @@ after_success:
  - bash <(curl -s https://codecov.io/bash)
 before_install:
  - sudo apt-get install -y libimage-exiftool-perl
+ - if [[ ${TRAVIS_PHP_VERSION:0:3} == "5.6" ]]; then composer require --dev --no-update phpunit/phpunit ~5; fi
+ - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then composer require --dev --no-update phpunit/phpunit ~6; fi
+ - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]]; then composer require --dev --no-update phpunit/phpunit ~7; fi
