more phpunit debug

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,5 @@ install:
  - ls -l vendor/bin/
  - ls -l vendor/phpunit/
  - phpunit --version
+ - vendor/phpunit/phpunit --version
+ - PHPUNITCOMMAND=vendor/phpunit/phpunit
