--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,4 @@ before_install:
  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then composer require --dev --no-update phpunit/phpunit ~6; fi
  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]]; then composer require --dev --no-update phpunit/phpunit ~7; fi
 install:
- - if [ $(echo "${TRAVIS_PHP_VERSION:0:3} <= 7.1" | bc -l) -eq 1 ]; then travis_retry composer install --no-interaction --ignore-platform-reqs; fi
- - ls -l vendor/bin/
- - ls -l vendor/phpunit/
- - phpunit --version
- - vendor/bin/phpunit --version
- - PHPUNITCOMMAND=vendor/bin/phpunit
+ - if [ $(echo "${TRAVIS_PHP_VERSION:0:3} <= 7.1" | bc -l) -eq 1 ]; then travis_retry composer install --no-interaction --ignore-platform-reqs && export PHPUNITCOMMAND=vendor/bin/phpunit; fi
