--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ before_install:
  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "5.6" ]]; then composer require --dev --no-update phpunit/phpunit ~5; fi
  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then composer require --dev --no-update phpunit/phpunit ~5; fi
  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]]; then composer require --dev --no-update phpunit/phpunit ~7; fi
+ - if [ $(echo "${TRAVIS_PHP_VERSION:0:3} >= 7.3" | bc -l) -eq 1 ]; then composer require --dev phpunit/php-code-coverage; fi
 install:
  - if [ $(echo "${TRAVIS_PHP_VERSION:0:3} <= 7.1" | bc -l) -eq 1 ]; then travis_retry composer install --no-interaction --ignore-platform-reqs && export PHPUNITCOMMAND=vendor/bin/phpunit; fi
