--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
 
     - name: Install exiftool
-      run: apt-get install libimage-exiftool-perl
+      run: sudo apt-get install -y libimage-exiftool-perl
 
     - name: Checkout
       uses: actions/checkout@v3
