--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -15,8 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
-        php-versions: ['7.4', '8.0']
+        php-versions: ['7.0', '7.4', '8.0', '8.1', '8.2', '8.3']
         phpunit-versions: ['latest']
 
     steps:
