--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -17,7 +17,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.0', '7.4', '8.0', '8.1', '8.2', '8.3']
+        # php-versions: ['7.0', '7.4', '8.0', '8.1', '8.2', '8.3']
+	php-versions: ['7.4']
         phpunit-versions: ['latest']
 
     steps:
